# tauri-test

./: Makefile
tauri-app/src/: index.html  main.js
tauri-app/src-tauri/: Cargo.toml
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: lib.rs
